--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,7 @@
                 <div class='card-content'>
                     <div class='media'>
                         <div class='media-content'>
+                            <p>Created at <%=post.created_at.strftime("%Y-%m-%d-%I-%M-%S-%p")%></p>
                             <p class='title is-4'> <%= link_to post.title, post %></p>
                         </div>
                     </div>
